# palmos_portal

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  requirements.txt  run.sh
docs/: palmos-dev-guide.md
docs/superpowers/plans/: 2026-03-29-palm-com.md  2026-03-29-palm-web-ui.md  2026-04-05-palm-2048.md
docs/superpowers/specs/: 2026-03-29-palm-com-design.md  2026-03-29-palm-web-ui-design.md  2026-04-05-palm-2048-design.md
palm/: __init__.py  dlp.py  padp.py  pdb.py  project.py  resources.py  slp.py  transport.py
projects/asciimation/: STAR WARS ASCIIMATION - Main Page.html  StarWarsAscii.prc
projects/asciimation/tools/: convert_film.py
projects/breakout/: Breakout.Rsrc.prc  Breakout.proj.prc
projects/game2048/: .gitignore  build.py  game2048.c
projects/tinygl/: tinyGL.prc  tinyGLCode.prc
projects/tinygl/doc/: Glider1.wrl  index.htm  tinyGL.h.txt
tests/: test_cli.py  test_dlp.py  test_game2048_build.py  test_padp.py  test_pdb.py  test_pdb_device.py  test_slp.py  test_transport.py
tests/fixtures/: README.md
web/: __init__.py  __main__.py  server.py
web/static/: index.html
